<resources>
    <string name="app_name">OpenWort</string>
    <string name="ignoreline">#</string>
    <string name="rowsplit">\n</string>
    <string name="columnsplit">;</string>
    <string name="columnsplitReplace">\ ·\ </string>
    <string name="sortReplaceFrom">Ä;Ö;Ü;ä;ö;ü;ß</string>
    <string name="sortReplaceTo">Ae;Oe;Ue;ae;oe;ue;ss</string>
    <string name="searching">Suche nach \'%1$s\'</string>
    <string name="insertSearch">Suche betreten</string>
    <string name="leaveSearch">Suche verlassen</string>
    <string name="search">Suche</string>
    <string name="projPage">Info Webseite</string>
    <string name="flattr_this">Mikro Spende !</string>
    <string name="info">Datenquelle</string>
    <string name="empty">(noch) nichts gefunden ...</string>
    <string name="buzz">derb;vulg.</string>
    <string name="copying">Kopiert !</string>
    <string name="titleTroll">Do not Troll!</string>
    <string name="copypaste">Copy/Paste Editor</string>
    <string name="bodyTroll">Du kopierst soeben derbe und vulgäre Worte. Überdenke deine Tat und sende diese Worte nicht unüberlegt Freunden, Fremden oder Menschen aus deiner Arbeitswelt.</string>
    <string name="okay">ok</string>
    <string name="intro">lernen, nachschlagen, richtig schreiben</string>
</resources>
