<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:title="@string/search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always|collapseActionView" />

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/action_copypaste"
            android:title="@string/copypaste" />
    </group>

    <item
        android:id="@+id/action_project"
        android:title="@string/projPage"></item>

    <item
        android:id="@+id/action_flattr"
        android:title="@string/flattr_this"></item>

    <item android:id="@+id/action_web"
        android:title="@string/info"
        android:icon="@android:drawable/ic_menu_info_details"
        app:showAsAction="never" />
</menu>